{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 2022,
  "lineage": "9a128447-efc9-9af9-ca00-d137c96d87a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09de111bccc2657fd",
            "arn": "arn:aws:ec2:us-east-1:248179617249:elastic-ip/eipalloc-09de111bccc2657fd",
            "association_id": "eipassoc-04d70524e6ba5746f",
            "domain": "vpc",
            "id": "eipalloc-09de111bccc2657fd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0868c39a2c07604fc",
            "private_dns": "ip-10-0-4-125.ec2.internal",
            "private_ip": "10.0.4.125",
            "public_dns": "ec2-3-219-102-22.compute-1.amazonaws.com",
            "public_ip": "3.219.102.22",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "NAT-A-EIP"
            },
            "tags_all": {
              "Name": "NAT-A-EIP"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "eipalloc-09de111bccc2657fd",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:internet-gateway/igw-0536c339d0ec84547",
            "id": "igw-0536c339d0ec84547",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "igw-0536c339d0ec84547",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Terraform_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/fdaeac55342b10b4",
            "arn_suffix": "app/test-lb-tf/fdaeac55342b10b4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-319534527.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/fdaeac55342b10b4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d9db33f4ebd4e70e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017f6954f1810f9d8"
              },
              {
                "subnet_id": "subnet-0c287e81f5e5cf1b5"
              }
            ],
            "subnets": [
              "subnet-017f6954f1810f9d8",
              "subnet-0c287e81f5e5cf1b5"
            ],
            "tags": {
              "Environment": "Development"
            },
            "tags_all": {
              "Environment": "Development"
            },
            "vpc_id": "vpc-021646e44b3104d8a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/fdaeac55342b10b4"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_subnet.ALB-Subnet",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/fdaeac55342b10b4/a941c1b4e325da91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/terraform-capstone-tg/ef64c6c5a6cf665e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/fdaeac55342b10b4/a941c1b4e325da91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/fdaeac55342b10b4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:listener/app/test-lb-tf/fdaeac55342b10b4/a941c1b4e325da91"
          },
          "dependencies": [
            "aws_lb.Terraform_ALB",
            "aws_lb_target_group.target_group",
            "aws_security_group.Security_Rules",
            "aws_subnet.ALB-Subnet",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/terraform-capstone-tg/ef64c6c5a6cf665e",
            "arn_suffix": "targetgroup/terraform-capstone-tg/ef64c6c5a6cf665e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/terraform-capstone-tg/ef64c6c5a6cf665e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:248179617249:loadbalancer/app/test-lb-tf/fdaeac55342b10b4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-capstone-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:248179617249:targetgroup/terraform-capstone-tg/ef64c6c5a6cf665e"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09de111bccc2657fd",
            "association_id": "eipassoc-04d70524e6ba5746f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-006f314d086c12961",
            "network_interface_id": "eni-0868c39a2c07604fc",
            "private_ip": "10.0.4.125",
            "public_ip": "3.219.102.22",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ea97ae6c411fa8bd",
            "tags": {
              "Name": "gw NAT A"
            },
            "tags_all": {
              "Name": "gw NAT A"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "nat-006f314d086c12961",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform_capstone_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:network-interface/eni-0089e895aeb9c0565",
            "id": "eni-0089e895aeb9c0565",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ff:f2:ea:cd:71",
            "owner_id": "248179617249",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d9db33f4ebd4e70e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d55c7f9ea1d3e160",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "eni-0089e895aeb9c0565",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_subnet.Terraform_Web_Subnet_A",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ALB-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-0aab99671fab80b12",
            "id": "rtb-0aab99671fab80b12",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0536c339d0ec84547",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ALB RT"
            },
            "tags_all": {
              "Name": "ALB RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-0aab99671fab80b12",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-0822a8ada8b4905ea",
            "id": "rtb-0822a8ada8b4905ea",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006f314d086c12961",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Subnet A \u0026 B"
            },
            "tags_all": {
              "Name": "Route Table Subnet A \u0026 B"
            },
            "timeouts": null,
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-0822a8ada8b4905ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:route-table/rtb-06fb20c4cb4feebdb",
            "id": "rtb-06fb20c4cb4feebdb",
            "owner_id": "248179617249",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0536c339d0ec84547",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table NAT"
            },
            "tags_all": {
              "Name": "Route Table NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtb-06fb20c4cb4feebdb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b1fad5ac3a952a",
            "region": "us-east-1",
            "route_table_id": "rtb-0822a8ada8b4905ea",
            "subnet_id": "subnet-0d55c7f9ea1d3e160"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-022b1fad5ac3a952a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.RT",
            "aws_subnet.NAT-Subnet",
            "aws_subnet.Terraform_Web_Subnet_A",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abcc731bd014b586",
            "region": "us-east-1",
            "route_table_id": "rtb-0aab99671fab80b12",
            "subnet_id": "subnet-017f6954f1810f9d8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-0abcc731bd014b586",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.ALB-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_alb_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa4b6efcba6965ba",
            "region": "us-east-1",
            "route_table_id": "rtb-0aab99671fab80b12",
            "subnet_id": "subnet-0c287e81f5e5cf1b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-0aa4b6efcba6965ba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.ALB-RT",
            "aws_subnet.ALB-Subnet-B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9c12062cadace9",
            "region": "us-east-1",
            "route_table_id": "rtb-0822a8ada8b4905ea",
            "subnet_id": "subnet-090d5b43c120633c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-00e9c12062cadace9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_a",
            "aws_route_table.RT",
            "aws_subnet.NAT-Subnet",
            "aws_subnet.Terraform_Web_Subnet_B",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assosiation_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04645983ac9695274",
            "region": "us-east-1",
            "route_table_id": "rtb-06fb20c4cb4feebdb",
            "subnet_id": "subnet-0ea97ae6c411fa8bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "rtbassoc-04645983ac9695274",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT-NAT",
            "aws_subnet.NAT-Subnet",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group/sg-0d9db33f4ebd4e70e",
            "description": "Security Rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9db33f4ebd4e70e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Security Rules Terraform Capstone",
            "name_prefix": "",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Rules"
            },
            "tags_all": {
              "Name": "Security Rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sg-0d9db33f4ebd4e70e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ALB-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-017f6954f1810f9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017f6954f1810f9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ALB SUBNET"
            },
            "tags_all": {
              "Name": "ALB SUBNET"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-017f6954f1810f9d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ALB-Subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-0c287e81f5e5cf1b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c287e81f5e5cf1b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ALB subnet B"
            },
            "tags_all": {
              "Name": "ALB subnet B"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-0c287e81f5e5cf1b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NAT-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-0ea97ae6c411fa8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea97ae6c411fa8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "NAT subnet"
            },
            "tags_all": {
              "Name": "NAT subnet"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-0ea97ae6c411fa8bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_Web_Subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-0d55c7f9ea1d3e160",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d55c7f9ea1d3e160",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet A"
            },
            "tags_all": {
              "Name": "Subnet A"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-0d55c7f9ea1d3e160",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terraform_Web_Subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:subnet/subnet-090d5b43c120633c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d5b43c120633c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "248179617249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet B"
            },
            "tags_all": {
              "Name": "Subnet B"
            },
            "vpc_id": "vpc-021646e44b3104d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "subnet-090d5b43c120633c2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_Web_Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:vpc/vpc-021646e44b3104d8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c4a3d2cceba30f3",
            "default_route_table_id": "rtb-093880e165f1dd0ed",
            "default_security_group_id": "sg-0e4f1577d15e2bed2",
            "dhcp_options_id": "dopt-0887dd194bead1d4d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021646e44b3104d8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093880e165f1dd0ed",
            "owner_id": "248179617249",
            "region": "us-east-1",
            "tags": {
              "Name": "Terraform Web VPC"
            },
            "tags_all": {
              "Name": "Terraform Web VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "vpc-021646e44b3104d8a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-0fdf84faa7b674087",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fdf84faa7b674087",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d9db33f4ebd4e70e",
            "security_group_rule_id": "sgr-0fdf84faa7b674087",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-0fdf84faa7b674087",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-0e80c7c4d70b3149c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e80c7c4d70b3149c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d9db33f4ebd4e70e",
            "security_group_rule_id": "sgr-0e80c7c4d70b3149c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-0e80c7c4d70b3149c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248179617249:security-group-rule/sgr-09a040b3f56378982",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-09a040b3f56378982",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0d9db33f4ebd4e70e",
            "security_group_rule_id": "sgr-09a040b3f56378982",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "248179617249",
            "id": "sgr-09a040b3f56378982",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.Security_Rules",
            "aws_vpc.Terraform_Web_Vpc"
          ]
        }
      ]
    }
  ]
}